updata table 1 and align to 9 pages

--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -191,22 +191,22 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 		&  Method & ${EPE}\downarrow$ & $AAE\downarrow$ & $RMS\downarrow$ & $SEPE\downarrow$ & ${SAAE}\downarrow$ & ${SRMS}\downarrow$ \\
 		\midrule
 		\multirow{3}{*}{\rotatebox[origin=c]{90}{\emph{Circle}}}
-		& PWC-Net &           16.60  & 0.2994 & 63.44 &     0.0588   &     0.1469  &     0.3845  \\ 
-		& RAFT    &           16.56  & 0.2775 & 64.94 &     0.04669  &     0.1482  &     0.3301  \\
-		& DIS     &           16.50  & 0.2881 & 62.67 &     0.05375  &     0.1566  &     0.3515  \\
-		& Ours    & \phantom{0}4.854 & 0.1863 & 37.10 & \bf 0.007118 & \bf 0.05074 & \bf 0.01899 \\ 
+		& PWC-Net &               16.60  &     0.2994 &     63.44 &     0.0588   &     0.1469  &     0.3845  \\ 
+		& RAFT    &               16.56  &     0.2775 &     64.94 &     0.04669  &     0.1482  &     0.3301  \\
+		& DIS     &               16.50  &     0.2881 &     62.67 &     0.05375  &     0.1566  &     0.3515  \\
+		& Ours    & \bf \phantom{0}4.988 & \bf 0.1885 & \bf 39.26 & \bf 0.007241 & \bf 0.05278 & \bf 0.01824 \\ 
 		\midrule
 		\multirow{3}{*}{\rotatebox[origin=c]{90}{\emph{Line}}}
-		& PWC-Net &           32.25  & 0.2139 & 93.32 &     0.1215  &     0.1429  &     0.5289  \\ 
-		& RAFT    &           31.75  & 0.2908 & 96.55 &     0.08752 &     0.1595  &     0.4201  \\ 
-		& DIS     &           35.55  & 0.3328 & 98.24 &     0.1149  &     0.2063  &     0.4768  \\
-		& Ours    &           10.13  & 0.2447 & 48.60 & \bf 0.01600 & \bf 0.08798 & \bf 0.03566 \\
+		& PWC-Net &           32.25  &     0.2139 & 93.32     &     0.1215  &     0.1429  &     0.5289  \\ 
+		& RAFT    &           31.75  &     0.2908 & 96.55     &     0.08752 &     0.1595  &     0.4201  \\ 
+		& DIS     &           35.55  &     0.3328 & 98.24     &     0.1149  &     0.2063  &     0.4768  \\
+		& Ours    &    \bf    10.41  & \bf 0.2461 & \bf 55.78 & \bf 0.01533 & \bf 0.08943 & \bf 0.03448 \\
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}} 
-		& PWC-Net &           18.95  & 0.2866 & 67.92 &     0.06822 &     0.1463  &     0.4062  \\
-		& RAFT    &           20.20  & 0.2807 & 72.53 &     0.05648 &     0.1509  &     0.3517  \\
-		& DIS     &           25.74  & 0.3045 & 79.94 &     0.08347 &     0.1797  &     0.4127  \\
-		& Ours    & \phantom{0}8.602 & 0.2270 & 50.27 & \bf 0.01264 & \bf 0.07722 & \bf 0.02907 \\
+		& PWC-Net &               18.95  &     0.2866 &     67.92 &     0.06822 &     0.1463  &     0.4062  \\
+		& RAFT    &               20.20  &     0.2807 &     72.53 &     0.05648 &     0.1509  &     0.3517  \\
+		& DIS     &               25.74  &     0.3045 &     79.94 &     0.08347 &     0.1797  &     0.4127  \\
+		& Ours    & \bf \phantom{0}8.602 & \bf 0.2270 & \bf 50.27 & \bf 0.01264 & \bf 0.07722 & \bf 0.02907 \\
 		\bottomrule
 	\end{tabular}}%
 \end{table}
@@ -379,22 +379,22 @@ However, `w/o weight' performs slightly better on the complete dataset.
 		&  Method & ${EPE}\downarrow$ & $AAE\downarrow$ & $RMS\downarrow$ & $SEPE\downarrow$ & ${SAAE}\downarrow$ & ${SRMS}\downarrow$ \\
 		\midrule
 		\multirow{3}{*}{\rotatebox[origin=c]{90}{\emph{Circle}}}
-		& Full method  & 4.988 & 0.1885 & 39.26 &     0.007241 &     0.05278 &     0.01824 \\ 
-		& w/o weight   & 4.854 & 0.1863 & 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
-		& w/o ERP      & 4.961 & 0.1871 & 38.32 &     0.007165 &     0.05094 &     0.01504 \\ 
-		& w/o cubemap  & 4.956 & 0.1881 & 38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\ 
+		& Full method  &     4.988 &     0.1885 &     39.26 &     0.007241 &     0.05278 &     0.01824 \\ 
+		& w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
+		& w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\ 
+		& w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\ 
 		\midrule
 		\multirow{3}{*}{\rotatebox[origin=c]{90}{\emph{Line}}} 
-		& Full method  & 10.41 & 0.2461 & 55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
-		& w/o weight   & 10.13 & 0.2447 & 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\ 
-		& w/o ERP      & 10.82 & 0.2648 & 56.48 &     0.01580 &     0.09090 &     0.03519 \\ 
-		& w/o cubemap  & 10.88 & 0.2484 & 57.61 &     0.01575 &     0.08987 &     0.03535 \\ 
+		& Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
+		& w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\ 
+		& w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\ 
+		& w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}}
-		& Full method  & 8.602 & 0.2270 & 50.27 &     0.01264 &     0.07722 &     0.02907 \\
-		& w/o weight   & 7.524 & 0.2130 & 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
-		& w/o ERP      & 7.889 & 0.2260 & 47.40 &     0.01149 &     0.07092 &     0.02512 \\
-		& w/o cubemap  & 7.921 & 0.2182 & 47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
+		& Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
+		& w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
+		& w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
+		& w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
 		\bottomrule
 	\end{tabular}}%
 \end{table}\vspace{-2em}
