--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -284,8 +284,8 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 		(b–e) Estimated flow fields.
 		(f) Ground-truth flow.
 		(g–j) SEPE (spherical end-point error) heatmaps (lighter is better).
-		Top: \emph{office\_0} scene.
-		Bottom: \emph{apartment\_0} scene.}
+		Top: \emph{office\_0} scene, line camera motion.
+		Bottom: \emph{apartment\_0} scene, circle camera motion.}
 \end{figure*}
 
 
