--- a/doc/paper_draft/supplementary.tex
+++ b/doc/paper_draft/supplementary.tex
@@ -102,8 +102,8 @@ The tangent image padding extent the field of view  (See paper Section 3.2), so 
 But more padding is less angular resolution the same tangent image resolution.
 %
 %Which is the best padding ratio to balance the ??, the 
-We test padding size from 0.0 to 0.6, the result shown in the \cref{fig:sup:ablationpadding}.
-The more padding get lower SEPE, when padding size is 0.45 it get best ballance between 
+We test padding size from 0.0 to 0.6 and the result shown in the \cref{fig:sup:ablationpadding}.
+Larger padding size gets lower SEPE, when padding size is 0.5 it gets the best balance between angular resolution and padding size.
 
 
 \begin{figure*}[hbt!]
